--- a/style.css
+++ b/style.css
@@ -3,4 +3,14 @@ body {
     background-color: rgb(124, 174, 240);
     color: rgb(0, 0, 0);
     font-family: "Sancreek", serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
+    margin: 0;
+}
+button{
+    background-color: black;
+    color: aliceblue;
+    font-family:"Sancreek", serif ;
 }
