--- a/style.css
+++ b/style.css
@@ -14,3 +14,9 @@ button{
     color: aliceblue;
     font-family:"Sancreek", serif ;
 }
+.passo{
+    display: none;
+}
+.passo.ativo {
+    display: block;
+}
